refactor(patient): 患者管理模块收尾
【B端前端】
- PatientDetail 就诊记录/历史处方查询失败分支补 await message.error（antd v5 异步 API）

【B端后端】
- PatientController / PatientServiceImpl 改用 Math.clamp 替代手写分页钳制
- PatientController @Tag 去除编号前缀，同步描述
- PatientServiceImpl 补齐 @author/@since、软删过滤与手机号脱敏注释