@@ -24,10 +24,13 @@ import org.springframework.web.bind.annotation.RestController;
  * <p>仅返回本院就诊过的患者（通过 consult_record → doctor.hospital_id 关联过滤）；
  * 所有接口按当前登录管理员所属医院（{@code hospital_id}）做数据隔离。
  * 外部完整 URL 前缀为 {@code /api/b/admin/patients}。
+ *
+ * @author lezoo17
+ * @since 2026-08-09
  */
 @RestController
 @RequestMapping("/b/admin/patients")
-@Tag(name = "7-患者管理", description = "患者列表/详情/就诊记录/历史处方/当前用药与随访（管理员）")
+@Tag(name = "患者管理", description = "患者列表/详情/就诊记录/历史处方/当前用药与随访（管理员）")
 @RequiredArgsConstructor
 public class PatientController {
 
@@ -36,7 +39,7 @@ public class PatientController {
 
     /** 每页大小钳制到 [1, MAX_PAGE_SIZE] */
     private static int clampSize(int size) {
-        return Math.max(1, Math.min(size, MAX_PAGE_SIZE));
+        return Math.clamp(size, 1, MAX_PAGE_SIZE);
     }
 
     private final PatientService patientService;
